<resources>
<<<<<<< HEAD
    <string name="app_name">Zipp-e Service Provider</string>
=======
    <string name="app_name">ServiceProviderApp</string>
>>>>>>> dev
    <string name="title_activity_maps">Map</string>
    <string name="Open" />
    <string name="Close" />
    <string name="ps_mallital">Mallital</string>
    <string name="ps_tallital">Tallital</string>
    <string name="ps_mukteshwar">Mukteshwar</string>
    <string name="ps_bhowali">Bhowali</string>
    <string name="ps_bhimtal">Bhimtal</string>
    <string name="ps_betalghat">Betalghat</string>
    <string name="ps_ramnagar">Ramnagar</string>
    <string name="ps_kaladhungi">Kaladhungi</string>
    <string name="ps_haldwani">Haldwani</string>
    <string name="ps_mukhani">Mukhani</string>
    <string name="ps_banbhulpura">Banbhulpura</string>
    <string name="ps_lalkuwan">Lalkuwan</string>
    <string name="ps_chorgalia">Chorgalia</string>
    <string name="ps_kathgodam">Kathgodam</string>

    <string name="j_accountant">Accountant</string>
    <string name="j_aluminiumFabricator">Aluminium Fabricator</string>
    <string name="j_applianceRepair">Appliance Repair</string>
    <string name="j_architect">Architect</string>
    <string name="j_carpenter">Carpenter</string>
    <string name="j_caterer">Caterer</string>
    <string name="j_charteredAccountant">Chartered Accountant</string>
    <string name="j_chef">Chef</string>
    <string name="j_civilEngineer">Civil Engineer</string>
    <string name="j_coach">Coach</string>
    <string name="j_computerRepairTechnician">Computer Repair Technician</string>
    <string name="j_cook">Cook</string>
    <string name="j_deepCleaning">Deep Cleaning</string>
    <string name="j_delivery">Delivery</string>
    <string name="j_designer">Designer</string>
    <string name="j_dietician">Dietician</string>
    <string name="j_doctor">Doctor</string>
    <string name="j_driver">Driver</string>
    <string name="j_dryCleaning">Dry Cleaning</string>
    <string name="j_electrician">Electrician</string>
    <string name="j_errandPerson">Errand Person</string>
    <string name="j_fitnessTrainer">Fitness Trainer</string>
    <string name="j_gardener">Gardener</string>
    <string name="j_houseKeeping">House Keeping</string>
    <string name="j_inspectionVisit">Inspection Visit</string>
    <string name="j_ironfabricator">Iron Fabricator</string>
    <string name="j_laundry">Laundry</string>
    <string name="j_lawyer">Lawyer</string>
    <string name="j_maid">Maid</string>
    <string name="j_mason">Mason</string>
    <string name="j_masonHelper">Masons Helper</string>
    <string name="j_mechanic">Mechanic</string>
    <string name="j_motorTraining">Motor Training </string>
    <string name="j_nurse">Nurse</string>
    <string name="j_painter">Painter</string>
    <string name="j_photographer">Photographer</string>
    <string name="j_plumber">Plumber</string>
    <string name="j_securityGuard">Security Guard</string>
    <string name="j_surveyor">Surveyor</string>
    <string name="j_sweeper">Sweeper</string>
    <string name="j_tailor">Tailor</string>
    <string name="j_homeTutor">Teacher / Home Tutor</string>
    <string name="j_towingService">Towing Service</string>
    <string name="j_yogaTrainer">Yoga Trainer</string>

    <string name="agree_to_terms">Please agree to our terms and conditions </string>
    <string name="incorrect_otp">Incorrect OTP.</string>
    <string name="first_reach_loc">You have not yet reached the pickup location.</string>
    <string name="something_wrong">Something went wrong. Please try again later.</string>
    <string name="offline">YOU ARE OFFLINE !</string>
    <string name="locked">YOU ARE CURRENTLY LOCKED ! \nCONTACT ADMIN</string>
    <string name="delivery_successful">Delivery done successfully ! You have earned ₹ %1$s</string>
    <string name="delivery_timeout">Delivery time out</string>
    <string name="delivery_failed">Delivery failed</string>
    <string name="login_unsuccessful">LOGIN UNSUCCESSFUL! CHECK YOUR INTERNET CONNECTION</string>
    <string name="verification_failed">Verification Failed</string>
    <string name="no_new_delivery">NO new delivery</string>
    <string name="del_pick_up">Delivery Pick Up</string>
    <string name="del_drop">Delivery Drop</string>
    <string name="your_loc">You Are Here</string>
    <string name="rs">₹</string>
    <string name="booking_information">Job Information</string>
    <string name="check_internet">CHECK YOUR INTERNET CONNECTION!</string>
    <string name="view_in_map">View in map</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="colon">:</string>
    <string name="address">Address</string>
    <string name="city">AREA</string>
    <string name="customer_note">Customer Job Note</string>
    <string name="landmark">Landmark</string>
    <string name="phone">Phone</string>
    <string name="collect_cash">Collect Cash</string>
    <string name="enter_otp_provided_by_user">Enter OTP Provided by User</string>
    <string name="start">Start</string>
    <string name="delivery_drop_information">Delivery Drop\nInformation</string>
    <string name="receiver_phone">Receiver Phone</string>
    <string name="sender_phone">Sender Phone</string>
    <string name="collect_amount">Collect Amount</string>
    <string name="cash">Cash</string>
    <string name="upi">UPI</string>
    <string name="done">Done</string>
    <string name="fail">Fail</string>
    <string name="off_duty">Off Duty</string>
    <string name="on_duty">On Duty</string>
    <string name="new_booking">NEW JOBS</string>
    <string name="ongoing_booking">JOBS ACCEPTED</string>
    <string name="completed_booking">JOBS COMPLETED</string>
    <string name="hey_partner_with">HI !</string>
    <string name="enter_mobile">ENTER MOBILE</string>
    <string name="request_otp">request otp</string>
    <string name="enter_otp_to_verify">ENTER OTP TO VERIFY</string>
    <string name="login_key">LOGIN KEY</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="click_choose_picture">Click/Choose Picture</string>
    <string name="upload">UPLOAD</string>
    <string name="change_language">Change Language</string>
    <string name="dark_mode">DARK MODE</string>
    <string name="history">History</string>
    <string name="job_primary">Primary Job</string>
    <string name="job_secondary">Secondary Job</string>
    <string name="job_tertiary">Tertiary Job</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="jobs_skills">Select 3 Jobs</string>
    <string name="enter_name">Enter Name</string>
    <string name="gender">GENDER</string>
    <string name="nearest_police_station">Nearest Police Station</string>
    <string name="main_skill">Job 1</string>
    <string name="secondary_skill">Job 2</string>
    <string name="tertiary_skill">Job 3</string>
    <string name="upload_aadhar_front">upload aadhar front</string>
    <string name="upload_aadhar_back">upload aadhar back</string>
    <string name="terms_amp_conditions"><![CDATA[" TERMS & CONDITIONS"]]></string>
    <string name="i_agree_to_terms_amp_conditions"><![CDATA[I AGREE TO]]></string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="non_binary">OTHER</string>
    <string name="time">Time</string>
    <string name="job">JOB</string>
    <string name="duration">DURATION</string>
    <string name="you_earn">You Earn</string>
    <string name="registration_successful">Congratulations on your successful registration with us as a service provider.\n\nYou will receive a voice / video call on your registered mobile number shortly to complete your induction process.\n\nYou will receive a log in key post your induction within 24 hrs.</string>
    <string name="message_rs">₹ %1$s </string>
    <string name="partner">partner</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="end">END SERVICE</string>
    <string name="ongoing_job">Ongoing Job</string>
    <string name="upcoming_jobs">upcoming jobs</string>
    <string name="no_up_jobs">No Upcoming Jobs.</string>
    <string name="no_current_job">You are not on job currently.</string>
    <string name="j_date">This is the date for work\n %1$s</string>
    <string name="j_address">This is the address of the client.\n %1$s</string>
    <string name="j_note">These are the requirements of the client.\n %1$s</string>
    <string name="j_name">This is the name of the client.\n %1$s</string>
    <string name="j_time">This is the time for work.\n %1$s</string>
    <string name="j_hrs">This is the duration of work.\n %1$s hours.</string>
    <string name="j_earn">You will earn ₹ %1$s</string>
    <string name="j_area">\"The client is located in %1$s"</string>
    <string name="j_completed">Completed Jobs</string>
    <string name="j_summary">JOB SUMMARY</string>
    <string name="profile_picture_container">profile picture container</string>
    <string name="login">login</string>


</resources>
