<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ActivityRegistration">

            <RelativeLayout
                android:id="@+id/containerProfilePic"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@drawable/aadhar_container"
                    android:src="@drawable/ic_account_circle" />

                <TextView
                    android:id="@+id/txt_profile_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="#A90E0E0E"
                    android:padding="5dp"
                    android:text="@string/click_choose_picture"
                    android:textAllCaps="true"
                    android:textSize="18sp" />


            </RelativeLayout>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rect_box_outline"
                android:cursorVisible="true"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:padding="5dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/txtColor"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editTextMobile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_box_outline"
                android:cursorVisible="true"
                android:hint="@string/enter_mobile"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="5dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/txtColor"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/buttonVerifyPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bkg"
                android:padding="5dp"
                android:text="@string/request_otp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/editTextOTP"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/rect_box_outline"
                android:digits="0123456789"
                android:hint="@string/enter_otp_to_verify"
                android:inputType="phone"
                android:maxLength="6"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/txtColor"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnGender"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_box_outline"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/gender"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/btnPS"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_box_outline"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/nearest_police_station"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <Button
                android:id="@+id/list_job1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_box_outline"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/main_skill"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/list_job2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_box_outline"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/secondary_skill"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <Button
                android:id="@+id/list_job3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_box_outline"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tertiary_skill"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/containerAadhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/aadharFrontImg"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/aadhar_container" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="#A90E0E0E"
                    android:padding="5dp"
                    android:text="@string/upload_aadhar_front"
                    android:textAllCaps="true"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/containerAadharBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/aadharBackImg"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/aadhar_container" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="#A90E0E0E"
                    android:padding="5dp"
                    android:text="@string/upload_aadhar_back"
                    android:textAllCaps="true"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/tnc"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:buttonTint="@color/txtColor"
                    android:text="@string/i_agree_to_terms_amp_conditions"
                    android:textAllCaps="true"
                    android:textColor="@color/txtColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_tnc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/tnc"
                    android:text="@string/terms_amp_conditions"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <ImageButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_bkg"
                android:padding="15dp"
                android:scaleType="centerInside"
                android:src="@drawable/login"
                android:textAllCaps="true" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/simpleProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />
    </RelativeLayout>
</ScrollView>