<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/booking_information"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <!--<Button
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bkg"
                android:text="@string/view_in_map"
                android:textColor="#FFFFFF" />-->

            <LinearLayout
                android:id="@+id/layout_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/txt"
                android:layout_marginTop="15dp"
                android:background="@drawable/rect_box_outline"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txtr"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="10dp"
                    android:text="@string/date"
                    android:textAllCaps="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="28dp"
                    android:gravity="center|start"
                    android:text="@string/colon"
                    android:textAllCaps="true"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:maxLength="10"
                    android:paddingEnd="20dp"
                    android:text=""
                    android:textAllCaps="true"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/infoDate"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/ic_info" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/layout_name"
                android:layout_marginTop="15dp"
                android:background="@drawable/rect_box_outline"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txtadd"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="10dp"
                    android:text="@string/city"
                    android:textAllCaps="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="28dp"
                    android:gravity="center|start"
                    android:text="@string/colon"
                    android:textAllCaps="true"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/tvCity"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:maxLength="10"
                    android:paddingEnd="20dp"
                    android:text=""
                    android:textAllCaps="true"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/infoCity"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/ic_info" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_land"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/layout_phn"
                android:layout_marginTop="15dp"
                android:background="@drawable/rect_box_outline"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:id="@+id/txtLand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/customer_note"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/infoNote"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/ic_info" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAllCaps="true"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_phn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/layout_address"
                android:layout_marginTop="15dp"
                android:background="@drawable/rect_box_outline"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txtPhn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="10dp"
                    android:text="@string/phone"
                    android:textAllCaps="true"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="28dp"
                    android:gravity="center|start"
                    android:text="@string/colon"
                    android:textAllCaps="true"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center|end"
                    android:maxLength="10"
                    android:paddingEnd="20dp"
                    android:text=""
                    android:textAllCaps="true"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/dialPhn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/ic_phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnAccept"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bkg"
                    android:text="@string/accept"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnReject"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bkg"
                    android:text="@string/reject"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>
